@@ -10,20 +10,30 @@ public class TreeUtils {
 
     /**
      * 将数组构建成完全二叉树
+     * 数组中存在null, 则构成的不是完全而是普通二叉树
+     *
+     * @param array 二叉树的完全二叉树形式的数组(二叉树层次遍历的顺序)
      */
-    public static TreeNode buildCBT(int... array) {
+    public static TreeNode buildCBT(Integer... array) {
         int length = array.length;
         if (length == 1) {
             return TreeNode.of(array[0]);
         }
-        List<TreeNode> list = Arrays.stream(array).mapToObj(TreeNode::of).toList();
+
+        List<TreeNode> list = Arrays.stream(array)
+                .map(i -> i == null ? null : TreeNode.of(i))
+                .toList();
         for (int i = 0; 2 * i + 1 < length; i++) {
-            list.get(i).left = list.get(2 * i + 1);
+            TreeNode n = list.get(i);
+            if (n == null) {
+                continue;
+            }
+            n.left = list.get(2 * i + 1);
             if (2 * i + 2 < length) {
-                list.get(i).right = list.get(2 * i + 2);
+                n.right = list.get(2 * i + 2);
             }
         }
-        return list.get(0);
+        return list.getFirst();
     }
 
     /**
